# T5-for-KGQG

./: .gitignore  DEV実行環境.ipynb  README.md  pyproject.toml  本番実行環境.ipynb
config/: config01.yaml  config_pq_t5base_with_mask.yaml  config_pq_t5small.yaml  config_pq_t5small_with_mask.yaml  config_pq_t5small_without_mask.yaml  config_test.yaml  config_test_pq.yaml  config_test_wq.yaml  config_wq_t5base_with_mask.yaml  config_wq_t5base_without_mask.yaml
core/evaluation/: eval.py
core/evaluation/meteor/: meteor.py
mytransformers/: Copy Folder Log 09-17-2021.gsheet  DO NOT DELETE OR MODIFY - will be deleted after copying completes  setup.cfg
mytransformers/src/transformers/: file_utils.py  generation_utils.py  modeling_utils.py  tokenization_utils.py  tokenization_utils_base.py
mytransformers/src/transformers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mytransformers/src/transformers/models/t5/: modeling_t5.py
src/: dataset.py  evaluation.py  training.py
wandb/: latest-run
wandb/run-20210918_032028-14t02360/: run-14t02360.wandb
wandb/run-20210918_032028-14t02360/files/: config.yaml  wandb-metadata.json
wandb/run-20210918_034019-2s2rp8vt/: run-2s2rp8vt.wandb
wandb/run-20210918_034019-2s2rp8vt/files/: config.yaml  wandb-metadata.json
wandb/run-20210918_094057-sg63pkxj/: run-sg63pkxj.wandb
wandb/run-20210918_094057-sg63pkxj/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20210918_094954-3532f25n/files/: wandb-metadata.json
