[tool.poetry]
name = "adjacencyattentionwithoutselfloop"
version = "0.1.0"
description = ""
authors = ["Kosuke Aigo"]

[tool.poetry.dependencies]
python = "^3.7.0"
torch = "1.7.1"
torchtext = "0.8.0"
torchvision = "0.8.2"
pytorch_lightning = "1.2.1"
nltk = "3.6"
sentencepiece = "^0.1.96"
sacremoses = "^0.0.45"
filelock = "^3.0.12"
mlflow = "^1.19.0"
omegaconf = "^2.1.1"
Hydra = "^2.5"
hydra-core = "^1.1.1"
wandb = "0.10.7"
transformers = "4.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
